chore: remove jfoenix dependency