@@ -126,11 +126,6 @@
 			<classifier>mac</classifier>
 		</dependency>
 		<dependency>
-			<groupId>com.jfoenix</groupId>
-			<artifactId>jfoenix</artifactId>
-			<version>9.0.10</version>
-		</dependency>
-		<dependency>
 			<groupId>org.controlsfx</groupId>
 			<artifactId>controlsfx</artifactId>
 			<version>11.1.2</version>
@@ -270,10 +265,6 @@
 					<configuration>
 						<mainClass>com.owlplug.Bootstrap</mainClass>
 						<layout>JAR</layout>
-						<!--Arg required to fix illegal reflective access in JFXTextField -->
-						<jvmArguments>
-							--add-opens=java.base/java.lang.reflect=ALL-UNNAMED
-						</jvmArguments>
 					</configuration>
 					<executions>
 						<execution>
